[package]
name = "gtoolkit-vm-builder"
version = "0.1.0"
authors = ["feenk gmbh <contact@feenk.com>"]
edition = "2018"
build = "build.rs"

[[bin]]
name = "gtoolkit-vm-builder"
path = "src/main.rs"

[dependencies]
clap = "3.0.0-beta.2"
fs_extra = "1.1.0"
rustc_version = "0.2"
mustache = "0.9.0"
serde = { version = "1.0", features = [ "derive" ]}
serde_json = "1.0"
serde_yaml = "0.8"
url = "2.2.2"
which = "4.1.0"
user-error = "1.2.8"
cmake = { git = "https://github.com/syrel/cmake-rs", rev = "cce9d58d87bd5dd95afb9183fdbbf4cb5d4b2255" }
feenk-releaser = { git = "https://github.com/feenkcom/releaser-rs", tag = "v0.10.0" }
tar = "0.4"
flate2 = "1.0"
xz2 = "0.1"
downloader = "0.2.6"
file-matcher = "0.6.0"
pkg-config = "0.3"
crossbeam = "0.8"
git_info = "^0.1.2"
chrono = "0.4"
shared-library-builder = { git = "https://github.com/feenkcom/shared-library-builder-rs", features = [ "git-location" ] }
libprocess-library = { git = "https://github.com/feenkcom/libprocess.git" }
libglutin-library = { git = "https://github.com/feenkcom/libglutin.git" }
libgleam-library = { git = "https://github.com/feenkcom/libgleam.git" }
libskia-library = { git = "https://github.com/feenkcom/libskia.git" }
libsdl2-library = { git = "https://github.com/feenkcom/libsdl2.git" }
libopenssl-library = { git = "https://github.com/feenkcom/libopenssl.git" }
libfreetype-library = { git = "https://github.com/feenkcom/libfreetype.git" }
libcairo-library = { git = "https://github.com/feenkcom/libcairo.git" }
libgit2-library = { git = "https://github.com/feenkcom/libgit2.git" }

[build-dependencies]
vergen = "5"
anyhow = "1"