[package]
name = "gtoolkit-vm-builder"
version = "0.46.0"
authors = ["feenk gmbh <contact@feenk.com>"]
edition = "2021"
build = "build.rs"

[[bin]]
name = "gtoolkit-vm-builder"
path = "src/main.rs"

[dependencies]
clap = { version = "3", features = [ "derive", "color" ] }
fs_extra = "1.1"
rustc_version = "0.2"
mustache = "0.9"
serde = { version = "1.0", features = [ "derive" ]}
serde_json = "1.0"
serde_yaml = "0.8"
url = "2.2"
which = "4.1"
user-error = "1.2"
cmake = { git = "https://github.com/syrel/cmake-rs", rev = "cce9d58d87bd5dd95afb9183fdbbf4cb5d4b2255" }
cc = "1.0"
feenk-releaser = { git = "https://github.com/feenkcom/releaser-rs", tag = "v0.10.0" }
tar = "0.4"
flate2 = "1.0"
xz2 = "0.1"
downloader = "0.2"
file-matcher = "0.6"
pkg-config = "0.3"
crossbeam = "0.8"
git_info = "^0.1.2"
chrono = "0.4"
shared-library-builder = { git = "https://github.com/feenkcom/shared-library-builder-rs", features = [ "git-location", "downloader" ] }
libprocess-library = { git = "https://github.com/feenkcom/libprocess.git" }
libclipboard-library = { git = "https://github.com/feenkcom/libclipboard.git" }
libglutin-library = { git = "https://github.com/feenkcom/libglutin.git" }
libwinit-library = { git = "https://github.com/feenkcom/libwinit.git" }
libgleam-library = { git = "https://github.com/feenkcom/libgleam.git" }
libskia-library = { git = "https://github.com/feenkcom/libskia.git" }
libsdl2-library = { git = "https://github.com/feenkcom/libsdl2.git" }
libpixels-library = { git = "https://github.com/feenkcom/libpixels.git" }
libopenssl-library = { git = "https://github.com/feenkcom/libopenssl.git" }
libfreetype-library = { git = "https://github.com/feenkcom/libfreetype.git" }
libcairo-library = { git = "https://github.com/feenkcom/libcairo.git" }
libgit2-library = { git = "https://github.com/feenkcom/libgit2.git" }

[target.'cfg(target_os = "macos")'.dependencies]
mach_object = "0.1"
memmap = "0.7"

#[patch.'https://github.com/feenkcom/shared-library-builder-rs']
#shared-library-builder = { path = "../shared-library-builder-rs" }

[build-dependencies]
vergen = "5"
anyhow = "1"